# synaptiq_data_engine

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
alembic/: README  env.py
alembic/versions/: 20241223_000000_001_initial_auth_tables.py  20241224_000000_002_add_conversations_notes_tables.py  20241229_000000_003_add_note_artifacts.py  20260227_063626_16e2c7853fdb_add_api_keys_and_preferred_model_to_.py  20260301_000000_004_add_api_keys_and_model.py
config/: __init__.py  settings.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/docs/: ui-regression-checklist.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: jit.js
scripts/: merge_duplicate_concepts.py  test_auth.py
src/synaptiq/: __init__.py  __main__.py
src/synaptiq/adapters/: __init__.py  base.py  file.py  notes.py  web.py  youtube.py
src/synaptiq/agents/: __init__.py  context.py  model_config.py  prompts.py  query_agent.py  schemas.py  session.py  sparql_agent.py  tools.py
src/synaptiq/api/: __init__.py  app.py  dependencies.py  websocket.py
src/synaptiq/cli/: __init__.py  commands.py
src/synaptiq/core/: __init__.py  exceptions.py  schemas.py
src/synaptiq/domain/: __init__.py  artifacts.py  models.py
src/synaptiq/infrastructure/: __init__.py  database.py
src/synaptiq/ontology/: __init__.py  conflict_resolver.py  graph_manager.py  namespaces.py  synaptiq.ttl
src/synaptiq/processors/: __init__.py  base.py  chunker.py  (+10 more)
(+86 files in other folders)
